[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/Buttons/IonDrive.png" type="Texture2D" id=3]
[ext_resource path="res://Graphics/Buttons/ChemicalDrive.png" type="Texture2D" id=4]
[ext_resource path="res://Graphics/Icons/Time.png" type="Texture2D" id=5]
[ext_resource path="res://Scripts/DrivePanel.gd" type="Script" id=6]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=7]

[node name="Drives" type="Panel"]
offset_top = 104.0
offset_right = 1064.0
offset_bottom = 600.0
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -220.0
offset_right = 204.0
offset_bottom = -188.0
text = "CLICK_DRIVE_TO_USE"
align = 1
valign = 1

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -184.0
offset_right = 204.0
offset_bottom = -40.0

[node name="Drives" type="HBoxContainer" parent="Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 398.0
offset_bottom = 138.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CD" type="TextureButton" parent="Panel/Drives"]
modulate = Color( 1, 1, 1, 0.501961 )
offset_left = 64.0
offset_right = 192.0
offset_bottom = 128.0
theme = ExtResource( 7 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ID" type="TextureButton" parent="Panel/Drives"]
modulate = Color( 1, 1, 1, 0.501961 )
offset_left = 196.0
offset_right = 324.0
offset_bottom = 128.0
theme = ExtResource( 7 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="OptionButton" type="OptionButton" parent="Control"]
offset_left = 460.0
offset_top = 240.0
offset_right = 669.0
offset_bottom = 272.0
expand_icon = true

[node name="HSlider" type="HSlider" parent="Control"]
offset_left = 392.0
offset_top = 320.0
offset_right = 548.0
offset_bottom = 336.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
offset_left = 564.0
offset_top = 308.0
offset_right = 596.0
offset_bottom = 340.0
grow_horizontal = 0
grow_vertical = 2
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
offset_left = 580.0
offset_top = 376.0
offset_right = 608.0
offset_bottom = 408.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
offset_left = 612.0
offset_top = 309.0
offset_right = 732.0
offset_bottom = 341.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
offset_left = 620.0
offset_top = 376.0
offset_right = 740.0
offset_bottom = 408.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
offset_left = 324.0
offset_top = 376.0
offset_right = 544.0
offset_bottom = 408.0
grow_horizontal = 0
grow_vertical = 2
text = "TIME_REDUCTION"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
offset_left = 332.0
offset_top = 240.0
offset_right = 436.0
offset_bottom = 272.0
grow_horizontal = 0
grow_vertical = 2
text = "FUEL"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
offset_left = 404.0
offset_top = 444.0
offset_right = 696.0
offset_bottom = 480.0
text = "SPEED_UP_SHIPS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Drives/CD" to="." method="_on_ChemicalDrive_pressed"]
[connection signal="pressed" from="Panel/Drives/ID" to="." method="_on_IonDrive_pressed"]
[connection signal="item_selected" from="Control/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Control/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Control/Button" to="." method="use_drive"]
